module(
    name = "chip8",
    version = "1.0",
)

bazel_dep(name = "googletest", version = "1.17.0")
bazel_dep(name = "rules_cc", version = "0.1.1")

local_deps_extension = use_extension("//:local_deps.bzl", "local_deps_extension")
local_deps_extension.local_lib(
    name = "sdl3",
    build_file_content = """load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "sdl3",
    visibility = ["//visibility:public"],
    includes = ["include"],
    hdrs = glob(["include/SDL3/**/*.h"]),
    srcs = glob(["lib/libSDL3.dylib"]),
)
""",
    path = "/opt/homebrew/opt/sdl3",
)
use_repo(local_deps_extension, "sdl3")

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "4f28899228fb3ad0126897876f147ca15026151e",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)
